--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,13 @@ version: 1
 runtime: go
 api_version: go1
 
-handlers:
+# re-direct to index.html if no path is give
 - url: /
-  static_dir: static
+  static_files: index.html
+  upload: index.html
+
+# access the static resources in the root director
+
+- url: /(.*)
+  static_files: \1
+  upload: (.*)
