--- a/app.yaml
+++ b/app.yaml
@@ -3,6 +3,8 @@ version: 1
 runtime: go
 api_version: go1
 
+handlers:
+
 # re-direct to index.html if no path is give
 - url: /
   static_files: index.html
